css/style.css
@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;700&display=swap');
@import url(about.css);
@import url(blog.css);
@import url(menu.css);

* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

:root {
    --orange: #693216;
}

body {
    font-family: 'Oswald', sans-serif;
    font-size: 16px;
}

a {
    text-decoration: none;
    color: var(--orange);
}

ul {
    list-style: none;
}

.mobile {
    visibility: visible;
}

.desktop {
    visibility: hidden;
}


/* navigation style  */
.nav-main {
    display: flex;
    justify-content: space-evenly;
    align-items: center;
}

.nav-list{
    display: flex;
    justify-content: center;
    align-items: center;
}

.main-links {
    padding: 10px;
    transition: all .5s;
}

.main-links:hover {
    color: #a5532b;
}

.logo {
    margin: 0px 0px 0px 50px;
}

.sub-btn {
    margin: 10px 50px 0px 0px;
}

.sub {
    background-color: var(--orange);
    color: white;
    border-radius: 5%;
    border: none;
    width: 100px;
    height: 50px;
    font-size: 20px;
    cursor: pointer;
}

.sub:hover {
    color: var(white);
    background-color:  #a5532b;
}


/* featured section  */
.featured {
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: 200px repeat(4, 100px) 200px;
    justify-content: center;
    grid-gap: 10px;
    margin-top: 20px;
}

#ft-content {
    width: 80%;
    height: 100%;
    margin: auto;
    border-radius: 5%;
    position: relative;
}

a.link-image {
    position: absolute;
    top: 0; right: 0; bottom: 0; left: 0;
    opacity: .2;
    cursor: pointer;
    border-radius: 5%;
    background-color: grey;
}

a.link-image:hover {
    background-color: gray;
    opacity: 0.5;
}

.feature-article-1 {
    background-image: url(../images/life.jpg);
    background-repeat: round;
}

.feature-article-2 {
    background-image: url(../images/cheese.jpg);
    background-repeat: no-repeat;
}

.feature-article-3 {
    background-image: url(../images/breakfast.jpg);
    background-repeat: no-repeat;
}

.feature-article-4 {
    background-image: url(../images/beach.jpg);
    background-repeat: no-repeat;
}

.feature-article-5 {
    background-image: url(../images/bacon.jpg);
    background-repeat: no-repeat;
}

.feature-article-6 {
    background-image: url(../images/window.jpg);
    background-repeat: round;
}

.article-info-large {
    position: relative;
    top: 100px;
    left: 20px;
    color: var(--orange);
}

.article-info-small {
    position: relative;
    top: 20px;
    left: 20px;
    color: var(--orange);
}

.feature-title,
.feature-author {
    background-color: white;
    padding: 0px 0px 5px 5px;
}


/* latest posts section  */

.latest-posts {
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: auto;
    justify-content: center;
    align-items: center;
    grid-gap: 30px;
}

.latest-img {
    width: 300px;
    height: 200px;
    border-radius: 5%;
}

.latest-img:hover {
    opacity: 0.5;
}

.latest-header {
    margin: 45px 0px 45px 50px;
}

.latest-title:hover {
    color: #a5532b;
}

#latest-content {
    width: 80%;
    height: 100%;
    margin: auto;
}

.latest-summary {
    opacity: 0.5;
}

.category {
    color: white;
}

.category-bg{
    background-color: var(--orange);
    border-radius: 10%;
    padding: 2px;
}

#author-icon {
    opacity: 0.2;
    color: var(--orange);
    margin-right: 10px;
}

.latest-links,
.logo-link {
    color: black;
}

/* footer section  */

#footer {
    background-color: var(--orange);
    margin-top: 50px;
    text-align: center;
    height: 100px;
}

.footer-main-links {
    color: white;
    margin: 0px 20px;
    font-size: 20px;
}

.footer-nav-list {
    display: flex;
    justify-content: center;
    align-items: center;
}

/* media query for tablets  */

@media(min-width: 768px) {

    body {
        font-size: 20px;
    }

    .featured {
        display: grid;
        grid-template-columns: repeat(2, 1fr);
        grid-template-rows: 200px repeat(2, 100px) 200px;
        grid-gap: 10px;
        grid-template-areas: 
        "a1 a1"
        "a2 a3"
        "a4 a5"
        "a6 a6";
        margin: 70px;
    }

    .feature-article-1 {
        grid-area: a1;
    }
    
    .feature-article-2 {
       grid-area: a2;
    }
    
    .feature-article-3 {
        grid-area: a3;
    }
    
    .feature-article-4 {
        grid-area: a4;
    }
    
    .feature-article-5 {
        grid-area: a5;
    }
    
    .feature-article-6 {
       grid-area: a6;
    }

   #ft-content {
       width: 100%;
   }

   .latest-img {
    width: 500px;
    height: 300px;
    border-radius: 5%;
   }

   .category {
    width: 70px;
   }

}

/* media query for desktop  */

@media (min-width: 1024px) {

    body {
        font-size: 24px;
    }

    .mobile {
        display: none;
    }

    .desktop {
        visibility: visible;
    }

    .main-links {
        font-size: 38px;
        margin: 0 50px;
    }

    .logo {
        margin: 0;
    }

    .featured {
        display: grid;
        grid-template-columns: repeat(4, 1fr);
        grid-template-rows: repeat(4, 200px);
        grid-gap: 10px;
        grid-template-areas: 
        "a1 a1 a2 a3"
        "a1 a1 a6 a6"
        "a1 a1 a6 a6"
        "a4 a5 a6 a6" ;
        margin: 70px;
    }

    .feature-article-1 {
        grid-area: a1;
    }
    
    .feature-article-2 {
       grid-area: a2;
    }
    
    .feature-article-3 {
        grid-area: a3;
    }
    
    .feature-article-4 {
        grid-area: a4;
    }
    
    .feature-article-5 {
        grid-area: a5;
    }
    
    .feature-article-6 {
       grid-area: a6;
    }

    #ft-content {
       width: 100%;
    }

    .category {
       width: 80px;
       margin: auto;
    }

    #latest-content,
    .latest-header {
      text-align: center;  
    
    }

    .latest-posts {
        display: grid;
        grid-template-columns: repeat(2, 1fr);
        grid-template-rows: auto;
        justify-content: center;
        align-items: center;
        grid-gap: 30px;
    }
}

